# ChangeLog for app-text/asciidoc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/asciidoc/ChangeLog,v 1.80 2012/04/08 16:43:07 armin76 Exp $

  08 Apr 2012; Raúl Porcel <armin76@gentoo.org> asciidoc-8.6.5.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #388225

  07 Apr 2012; Markus Meier <maekke@gentoo.org> asciidoc-8.6.5.ebuild:
  x86 stable, bug #388225

  28 Mar 2012; Markus Meier <maekke@gentoo.org> asciidoc-8.6.5.ebuild:
  arm stable, bug #388225

  25 Mar 2012; Brent Baude <ranger@gentoo.org> asciidoc-8.6.5.ebuild:
  Marking asciidoc-8.6.5 ppc64 for bug 388225

  25 Mar 2012; Jeroen Roovers <jer@gentoo.org> asciidoc-8.6.5.ebuild:
  Stable for HPPA (bug #388225).

  25 Mar 2012; Brent Baude <ranger@gentoo.org> asciidoc-8.6.5.ebuild:
  Marking asciidoc-8.6.5 ppc for bug 388225

  24 Mar 2012; Agostino Sarubbo <ago@gentoo.org> asciidoc-8.6.5.ebuild:
  Stable for amd64, wrt bug #388225

  23 Mar 2012; Mike Gilbert <floppym@gentoo.org> asciidoc-8.6.5.ebuild,
  asciidoc-8.6.7.ebuild, asciidoc-9999.ebuild:
  sed || die. Reported by Maurizio Camisaschi in bug 388225.

*asciidoc-8.6.7 (19 Mar 2012)

  19 Mar 2012; Sebastian Pipping <sping@gentoo.org> +asciidoc-8.6.7.ebuild,
  asciidoc-9999.ebuild:
  Bump to 8.6.7, allow pygments for USE=highlight (bug #383291)

  30 Jun 2011; Sebastian Pipping <sping@gentoo.org> asciidoc-8.5.3.ebuild,
  asciidoc-8.6.3.ebuild, asciidoc-8.6.4.ebuild, asciidoc-8.6.5.ebuild,
  asciidoc-9999.ebuild:
  Add "graphviz? ( media-gfx/graphviz )" to runtime dependencies (bug #361255)

  27 Jun 2011; Sebastian Pipping <sping@gentoo.org> asciidoc-8.5.3.ebuild,
  asciidoc-8.6.3.ebuild, asciidoc-8.6.4.ebuild, asciidoc-8.6.5.ebuild,
  asciidoc-9999.ebuild:
  Remove runtime dependency on graphviz (bug #361255)

*asciidoc-8.6.5 (22 May 2011)

  22 May 2011; Sebastian Pipping <sping@gentoo.org> +asciidoc-8.6.5.ebuild:
  Bump to 8.6.5, looks trivial
