@@ -1,6 +1,10 @@
 # ChangeLog for app-text/asciidoc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/asciidoc/ChangeLog,v 1.80 2012/04/08 16:43:07 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/asciidoc/ChangeLog,v 1.81 2012/04/26 18:29:53 aballier Exp $
+
+  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> asciidoc-8.6.7.ebuild,
+  asciidoc-9999.ebuild:
+  keyword ~amd64-fbsd
 
   08 Apr 2012; Raúl Porcel <armin76@gentoo.org> asciidoc-8.6.5.ebuild:
   alpha/ia64/s390/sh/sparc stable wrt #388225
